src/ts/tests/fixtures/invalid_include_tree/tree_invalid.cloesce.ts
// @ts-nocheck
// InvalidDataSourceDefinition
import { DataSource } from "../../../src/ui/backend.ts";

@Model()
export class Foo {
  id: number;

  static readonly foo: DataSource<Foo> = {
    includeTree: 1,
  };
}
